--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base    = "frontend"
-  publish = "dist/frontend"
+  publish = "frontend/dist"
   command = "npx ng build"
 
 [[redirects]]
